--- a/nginx.conf
+++ b/nginx.conf
@@ -2,15 +2,9 @@ server {
   listen 80;
   server_name localhost;
 
-  root /usr/share/nginx/html;
-  index index.html;
-
   location /sature/ {
-    alias /usr/share/nginx/html/;
-    try_files $uri /index.html;
-  }
-
-  location / {
-    return 404;
+    root /usr/share/nginx/html;
+    index index.html;
+    try_files $uri $uri/ /sature/index.html;
   }
 }
