fix: Move root and index directives to server block for better configuration clarity

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,14 @@ server {
   listen 80;
   server_name localhost;
 
+  root /usr/share/nginx/html;
+  index index.html;
+
   location /sature/ {
-    root /usr/share/nginx/html;
-    index index.html;
     try_files $uri $uri/ /sature/index.html;
+  }
+
+  location / {
+    return 404;
   }
 }
