fix: Add exact redirect for /sature to improve routing clarity

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,11 @@ server {
     try_files $uri $uri/ /sature/index.html;
   }
 
+  # Esta parte es clave para redireccionar EXACTAMENTE /sature
+  location = /sature {
+    return 302 /sature/;
+  }
+
   location / {
     return 404;
   }
