fix: Update /sature location block for improved file handling and routing

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,11 @@ server {
   index index.html;
 
   location /sature/ {
-    try_files $uri $uri/ /sature/index.html;
+    alias /usr/share/nginx/html/;
+    index index.html;
+    try_files $uri $uri/ index.html;
   }
 
-  # Esta parte es clave para redireccionar EXACTAMENTE /sature
   location = /sature {
     return 302 /sature/;
   }
