--- a/nginx.conf
+++ b/nginx.conf
@@ -5,17 +5,7 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  location /sature/ {
-    alias /usr/share/nginx/html/;
-    index index.html;
-    try_files $uri $uri/ index.html;
-  }
-
-  location = /sature {
-    return 302 /sature/;
-  }
-
   location / {
-    return 404;
+    try_files $uri $uri/ /index.html;
   }
 }
